# usehid

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  publish.yml
docs/: AGENT_API_SPEC.md  blog-openclaw-usehid.md
skills/usehid/: SKILL.md  usehid_tool.py
usehid-cli/: Cargo.toml
usehid-cli/src/: main.rs  output.rs
usehid-cli/src/commands/: exec.rs  failsafe.rs  gamepad.rs  keyboard.rs  mod.rs  mouse.rs  run.rs  screen.rs
usehid-core/: Cargo.toml  README.md
usehid-core/examples/: agent.rs  agent_browse.rs  auto_login.rs  baidu.rs  browser_shortcuts.rs  copy_paste.rs  drag_drop.rs  draw_mouse.rs  failsafe_demo.rs  file_ops.rs  keyboard.rs  mouse.rs  screen_info.rs  screenshot.rs  tween_demo.rs  window_mgmt.rs
usehid-core/src/: agent.rs  error.rs  failsafe.rs  gamepad.rs  hid.rs  keyboard.rs  lib.rs  mouse.rs  screen.rs  tween.rs
usehid-core/src/platform/: linux.rs  mod.rs  windows.rs
usehid-core/src/platform/macos/: cgevent.rs  mod.rs
usehid-go/: README.md  go.mod  usehid.go
usehid-node/: README.md  index.d.ts  index.js  package.json
usehid-python/: Cargo.toml  README.md  pyproject.toml
usehid-python/src/: lib.rs
