[package]
name = "usehid-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cross-platform virtual HID device library for AI agents"
readme = "README.md"
repository = "https://github.com/jiusanzhou/usehid"
homepage = "https://github.com/jiusanzhou/usehid"
documentation = "https://docs.rs/usehid-core"
keywords = ["hid", "mouse", "keyboard", "automation", "agent"]
categories = ["api-bindings", "hardware-support", "os"]

[features]
default = []

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bitflags = { version = "2.8", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
io-kit-sys = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["ioctl", "fs"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "mouse"
path = "examples/mouse.rs"

[[example]]
name = "keyboard"
path = "examples/keyboard.rs"

[[example]]
name = "agent"
path = "examples/agent.rs"

[[example]]
name = "agent_browse"
path = "examples/agent_browse.rs"

[[example]]
name = "baidu"
path = "examples/baidu.rs"

[[example]]
name = "auto_login"
path = "examples/auto_login.rs"

[[example]]
name = "screenshot"
path = "examples/screenshot.rs"

[[example]]
name = "copy_paste"
path = "examples/copy_paste.rs"

[[example]]
name = "file_ops"
path = "examples/file_ops.rs"

[[example]]
name = "window_mgmt"
path = "examples/window_mgmt.rs"

[[example]]
name = "browser_shortcuts"
path = "examples/browser_shortcuts.rs"

[[example]]
name = "draw_mouse"
path = "examples/draw_mouse.rs"

[[example]]
name = "drag_drop"
path = "examples/drag_drop.rs"
