[package]
name = "usehid-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for useHID virtual HID device library"

[lib]
name = "usehid"
crate-type = ["cdylib"]

[dependencies]
usehid-core = { path = "../usehid-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json = "1.0"
